# humanize-en

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  live-test-2026-05-12.md  plan.md  release.md  rules.md
examples/: 01_detect_only.py  02_polish_with_llm.py  03_iterative_loop.py  04_inject_rules_into_prompt.py  README.md
humanize_en/: __init__.py  combined.py  detect.py  iterative.py  judge.py  ngram_check.py  postprocess.py  prompt.py
humanize_en/_lang/: __init__.py
humanize_en/_lang/en/: __init__.py  _labels.py  detector.py  ngram.py  profile.py  prompts.py  replacements.py
humanize_en/_lang/en/data/: __init__.py  _ngram_engine.py  lr_coef_en.json  replacements.json  rules.json
humanize_en/cli/: __init__.py  __main__.py  main.py
humanize_en/llm/: __init__.py
humanize_en/perplexity/: __init__.py  binoculars_wrapper.py
humanize_en/web/: __init__.py  __main__.py  app.py
humanize_en/web/templates/: __init__.py  _detect_result.html  _error.html  _judge_result.html  _loading_skel.html  _loop_result.html  _oneshot_result.html  _polish_result.html  base.html  index.html
scripts/: build_ngram_data.py  calibrate_rhythm.py  gen_rules_doc.py  mine_rule_candidates.py  run_benchmarks.py  verify_e2e.py
tests/: conftest.py  test_bench_helpers.py  test_cli.py  test_detector.py  test_examples_smoke.py  test_judge.py  test_ngram.py  test_perplexity.py  test_prompts.py  test_protocols.py  test_replacements.py  test_rhythm_and_signals.py  test_rules_doc_gen.py  test_run_benchmarks_smoke.py  test_strength.py  test_top_level_api.py  test_ui_routes.py  test_web_app.py
tests/bench/: __init__.py  _data.py  _readability.py  _samples.json  test_binoculars_drop.py  test_meaning_preservation.py  test_pipeline_structure.py  test_readability.py
