[project]
name = "humanize-en"
version = "0.1.0a1"
description = "English AI-text humanizer plugin for humanize-core — interpretable rule/ngram detector + LLM polish, complements Binoculars/Fast-DetectGPT"
authors = [{ name = "song" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai-detection", "english", "humanize", "ngram", "llm", "binoculars", "raid"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = ["humanize-core>=0.1.0a1"]

[project.optional-dependencies]
openai = ["humanize-core[openai]>=0.1.0a1"]
anthropic = ["humanize-core[anthropic]>=0.1.0a1"]
ui = ["humanize-core[ui]>=0.1.0a1"]
# `perplexity` extra (M7): adds Binoculars (Falcon-7B base/instruct
# perplexity-ratio detector — ICML 2024, BSD-3 licence). Heavy:
# downloads ~14 GB of model weights on first use. Off by default.
perplexity = [
    "transformers>=4.40",
    "torch>=2.0",
    # Binoculars is not on PyPI as of this writing; users install via
    # `pip install humanize-en[perplexity]` AND
    # `pip install git+https://github.com/ahans30/Binoculars`.
    # We document the two-step install in README rather than hard-coding
    # a git URL into install_requires (uv resolves it cleanly, but pip
    # workflows are fragile).
]
# `bench` extra (M8): benchmark against the RAID adversarial corpus
# (ACL 2024) and measure Binoculars-score drop / BERTScore preservation.
bench = [
    "raid-bench>=0.1",
    "bert-score>=0.3",
    "scikit-learn>=1.3",
    "datasets>=2.14",  # for HuggingFace HC3 + RAID loading
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7.0",
    "mypy>=1.10",
    "httpx>=0.27",  # for FastAPI TestClient
    # Pull the [ui] extra into the dev env so tests/test_ui_routes.py
    # actually runs in CI rather than skipping when fastapi / jinja2
    # are absent. The user-facing [ui] extra still controls install
    # size for end users; this only affects local dev + CI.
    "humanize-core[ui]>=0.1.0a1",
]
# `build-data` extra (M2): training script for the n-gram freq table
# + LR calibration. Build-time only; never imported at runtime by
# the published wheel. Run via:
#     uv run --extra build-data python scripts/build_ngram_data.py
build-data = [
    # We pull HC3-en raw JSONL directly via huggingface_hub instead of
    # the higher-level ``datasets`` lib because ``datasets>=3.0`` dropped
    # support for Python loader scripts (HC3 ships ``HC3.py``). The hub
    # client is lighter, deterministic, and lets us record the dataset
    # commit SHA in the freq-table metadata.
    "huggingface-hub>=0.20",
    "scikit-learn>=1.3",  # LogisticRegression + train_test_split + AUC
    "numpy>=1.24",
]
all = ["humanize-en[openai,anthropic,ui]"]

[project.scripts]
humanize-en = "humanize_en.cli.main:main"

# Entry-point discovery: installing humanize-en auto-registers the EN
# profile with humanize-core's language registry without forcing
# downstream callers to ``import humanize_en`` first. Mirrors the ZH
# plugin's pattern; see Humanize/README.md for the architecture.
[project.entry-points."humanize_core.languages"]
en = "humanize_en._lang.en.profile:en_profile"

# While humanize-core is pre-release (not yet on PyPI), point uv at
# the sibling working copy. Remove once humanize-core ships to TestPyPI
# and the ``>=0.1.0a1`` spec resolves normally.
[tool.uv.sources]
humanize-core = { path = "../humanize-core", editable = true }

[project.urls]
Repository = "https://github.com/song/humanize-en"
Issues = "https://github.com/song/humanize-en/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["humanize_en"]
# Note: ``_lang/en/data/`` is picked up automatically as a sub-package
# of ``humanize_en`` — adding it to ``force-include`` (as an earlier
# revision did) makes hatchling emit each *.json / *.json.gz file
# twice into the wheel, ~doubling its size and producing
# ``Duplicate name`` warnings at build time.

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=humanize_en --cov-report=term-missing"

[tool.coverage.run]
source = ["humanize_en"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_any_generics = false
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
# - openai/anthropic: optional LLM SDKs, not always installed.
# - binoculars/raid: optional [perplexity] / [bench] extras.
# - humanize_core.*: sibling package ships no ``py.typed`` marker yet.
#   Drop this once humanize-core marks itself as typed.
module = [
    "openai.*",
    "anthropic.*",
    "binoculars.*",
    "raid.*",
    "humanize_core.*",
]
ignore_missing_imports = true
